Code & File Fixes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>App Landing Template </title>
+        <title>Donate To PRH</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
