--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -350,8 +350,8 @@
             </div>
         </div>
       </div>
-       <!-- Footer End-->
-   </footer>
+       <!-- Footer End
+   </footer> -->
    
 	<!-- JS here -->
 	
