--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Donate To PRH</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/32/null/charity-donation.png">
 
 		<!-- CSS here -->
             <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -45,7 +46,7 @@
                         <!-- Logo -->
                         <div class="col-xl-2 col-lg-2 col-md-2">
                             <div class="logo">
-                                <a href="index.html"><img src="" alt=""></a>
+                                <a href="#"><img src="" alt=""></a>
                             </div>
                         </div>
                         <div class="col-xl-10 col-lg-10 col-md-10">
@@ -53,7 +54,7 @@
                             <div class="main-menu f-right d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">    
-                                        <li><a href="index.html"> Home</a></li>
+                                        <li><a href="#"> Home</a></li>
                                         <!-- <li><a href="feature.html">Feature</a></li>
                                         <li><a href="services.html">Services</a></li>
                                         <li class="active"><a href="pricing.html">Pricing</a></li>
