--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                     <li>The original ETH Crypto</li>
                                     <li>High Gas Fees</li>
                                 </ul>
-                                <a href="#" class="btn card-btn1">Donate</a>
+                                <a href="ethereum.html" class="btn card-btn1">Donate</a>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                                     <li>Privacy & Anonymity Based Crypto</li>
                                     <li>Low Gas Fees</li>
                                 </ul>
-                                <a href="#" class="btn card-btn1">DONATE</a>
+                                <a href="monero.html" class="btn card-btn1">DONATE</a>
                             </div>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                                     <li>Fiat Backed Crypto</li>
                                     <li>High Gas Fees</li>
                                 </ul>
-                                <a href="#" class="btn card-btn1">Donate</a>
+                                <a href="usdt.html" class="btn card-btn1">Donate</a>
                             </div>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                                     <li>The original ETH Crypto</li>
                                     <li>High Gas Fees</li>
                                 </ul>
-                                <a href="#" class="btn card-btn1">Donate</a>
+                                <a href="solana.html" class="btn card-btn1">Donate</a>
                             </div>
                         </div>
                     </div>
