mb smol code update

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                     <li>Supports All UPI Apps</li>
                                     <li>NO Transaction Fees</li>
                                 </ul>
-                                <a href="#" class="btn card-btn1">Donate</a>
+                                <a href="UPI.html" class="btn card-btn1">Donate</a>
                             </div>
                         </div>
                     </div>
