--- a/index.html
+++ b/index.html
@@ -392,5 +392,6 @@
         <script src="./assets/js/plugins.js"></script>
         <script src="./assets/js/main.js"></script>
         
+	<center>   <footer> <strong> Website Owned and Maintained By:</strong> <strong><a href="https://prharshith.tk" target="_blank"><u>P R HARSHITH</u></a></strong> </footer> </center>
     </body>
 </html>
